# bbn-MotionCal

./: .gitignore  CMakeLists.txt  Info.plist  LICENSE  Makefile  README.md  TODO.md  imuread.c  portlist.cpp  serialdata.c
.github/workflows/: build.yaml
libcalib/: libcalib.cpp  libcalib.h
msvc/: images.cpp  images.rc
msvc/2017/: MotionCal.sln  MotionCal.vcxproj  SensorCal.sln  SensorCal.vcxproj  SensorCal.vcxproj.filters
msvc/2017/libcalib/: libcalib.vcxproj  libcalib.vcxproj.filters
src/: CMakeLists.txt  gui.cpp  gui.h  imuread.c  imuread.cpp  imuread.h  resource.rc  serialdata.c  serialdata.cpp  visualize.c  visualize.cpp
